[package]
name = "R0N-Ingress"
version = "0.1.0-beta.1"
edition = "2021"
description = "High-performance, protocol-agnostic ingress controller for routing and managing traffic"
license = "Apache-2.0"
repository = "https://github.com/R0N/R0N-Ingress"
readme = "README.md"
keywords = ["ingress", "gateway", "proxy", "networking", "load-balancer"]
categories = ["network-programming", "web-programming"]

[lib]
name = "r0n_ingress"
path = "src/lib.rs"

[[bin]]
name = "r0n-ingress"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"  # JSON for schema generation
rmp-serde = "1.3"       # MessagePack serialization
toml = "0.9"            # TOML configuration parsing

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Error handling
thiserror = "2"

# TLS
tokio-rustls = "0.26.4"
rustls-pemfile = "2.2.0"
webpki-roots = "1.0.5"

# Time utilities
humantime-serde = "1.1.1"

# Random number generation
rand = "0.9"

# HTTP server for metrics endpoint
hyper = { version = "1.8", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.19", features = ["tokio", "server-auto"] }
http-body-util = "0.1.3"
bytes = "1.10"
futures-util = "0.3"

# HTTP types and parsing
http = "1.4"
httparse = "1.10"
h2 = "0.4"

# WebSocket
tokio-tungstenite = "0.28"
base64 = "0.22"
sha1 = "0.10"

# Prometheus metrics
prometheus-client = "0.24"

# Regex for pattern matching
regex = "1.11"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.24"

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[lints.clippy]
# Correctness - these are almost always bugs
correctness = { level = "deny", priority = -1 }

# Suspicious - likely bugs
suspicious = { level = "warn", priority = -1 }

# Performance - inefficient code
perf = { level = "warn", priority = -1 }

# Style - idiomatic Rust
style = { level = "warn", priority = -1 }

# Complexity - overly complex code
complexity = { level = "warn", priority = -1 }

# Pedantic (optional, stricter)
# pedantic = { level = "warn", priority = -1 }

# Specific lint overrides
module_name_repetitions = "allow"
too_many_arguments = "allow"
