[package]
name = "R0N-Ingress"
version = "0.1.0-beta.2"
edition = "2021"
description = "High-performance, protocol-agnostic ingress controller for routing and managing traffic"
license = "Apache-2.0"
repository = "https://github.com/R0N/R0N-Ingress"
readme = "README.md"
keywords = ["ingress", "gateway", "proxy", "networking", "load-balancer"]
categories = ["network-programming", "web-programming"]

[lib]
name = "r0n_ingress"
path = "src/lib.rs"

[[bin]]
name = "r0n-ingress"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.49.0", features = ["full"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"  # JSON for schema generation
rmp-serde = "1.3.1"       # MessagePack serialization
toml = "0.9.8"            # TOML configuration parsing

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Error handling
thiserror = "2.0.18"

# TLS
tokio-rustls = "0.26.4"
rustls-pemfile = "2.2.0"
webpki-roots = "1.0.6"

# Time utilities
humantime-serde = "1.1.1"

# Random number generation
rand = "0.10.0"

# HTTP server for metrics endpoint
hyper = { version = "1.8.1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.20", features = ["tokio", "server-auto"] }
http-body-util = "0.1.3"
bytes = "1.11.1"
futures-util = "0.3.31"

# HTTP types and parsing
http = "1.4.0"
httparse = "1.10.1"
h2 = "0.4.13"

# WebSocket
tokio-tungstenite = "0.28.0"
base64 = "0.22.1"
sha1 = "0.10.6"

# Prometheus metrics
prometheus-client = "0.24.0"

# Regex for pattern matching
regex = "1.12.3"

# Date/time handling
chrono = { version = "0.4.43", features = ["serde"] }

[dev-dependencies]
tempfile = "3.25.0"
criterion = { version = "0.8.2", features = ["html_reports", "async_tokio"] }
comfy-table = "7.2.2"
tabled = "0.20.0"
colored = "3.1.1"
sysinfo = "0.38.1"
rcgen = "0.14.7"

[[bench]]
name = "module_lifecycle"
harness = false

[[bench]]
name = "load_balancer"
harness = false

[[bench]]
name = "rate_limiting"
harness = false

[[bench]]
name = "tcp_router"
harness = false

[[bench]]
name = "udp_router"
harness = false

[[bench]]
name = "tls_terminator"
harness = false

[[bench]]
name = "http_handler"
harness = false

[[bench]]
name = "websocket_handler"
harness = false

[[bench]]
name = "access_control"
harness = false

[[bench]]
name = "waf"
harness = false

[[bench]]
name = "l4_passthrough"
harness = false

[[bench]]
name = "mqtt_handler"
harness = false

[[bench]]
name = "http3_quic"
harness = false

[[bench]]
name = "ipc"
harness = false

[[bench]]
name = "config"
harness = false

[[bench]]
name = "perf_internals"
harness = false

[[bench]]
name = "metrics_tracing"
harness = false

[[bench]]
name = "e2e_proxy"
harness = false

[[bench]]
name = "concurrency"
harness = false

[[bench]]
name = "saturation"
harness = false

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[lints.clippy]
# Correctness - these are almost always bugs
correctness = { level = "deny", priority = -1 }

# Suspicious - likely bugs
suspicious = { level = "warn", priority = -1 }

# Performance - inefficient code
perf = { level = "warn", priority = -1 }

# Style - idiomatic Rust
style = { level = "warn", priority = -1 }

# Complexity - overly complex code
complexity = { level = "warn", priority = -1 }

# Pedantic (optional, stricter)
# pedantic = { level = "warn", priority = -1 }

# Specific lint overrides
module_name_repetitions = "allow"
too_many_arguments = "allow"
